# Transformer-From-Scratch

./: README.md  Transformer-From-Scratch.ipynb  pyproject.toml
Notebooks/: Attention-Deep-Dive.ipynb
experiments/: datasets_expriments.ipynb  lambda-experiments.ipynb  pre-input.ipynb
src/: __init__.py  clear_cuda.py  config.py  dataset.py  model.py  train.py
transformer_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
