[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "pylance>=1.0.3",
    "pylint>=4.0.4",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
]

[tool.setuptools.packages.find]
include = ["src*"]
